changed width of search bar on mobile from fixed to responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ input[type=search] {
     height: 40px;
     margin: 35px auto;
     padding: 5px;
-    width: 345px;
+    width: 85%;
 }
 
 
